partically fixed with text overflow in reasoning rectangles

--- a/style.css
+++ b/style.css
@@ -394,9 +394,12 @@
 }
 
 .reasoning-rectangle-wrap {
-    width: 200px;
-    height: 160px;
+    position: relative;
+    width: 37%;
+    height: 45%;
     background-color: #F7F7F7;
+    clear: both;
+    overflow: auto;
 }
 
 .reasoning-rectangle-number-plus {
@@ -428,7 +431,7 @@
 .reasoning-text-wrap {
     margin-left: 40px;  
     margin-top: 10px;
-    width: 50%;
+    max-width: 50%;
 }
 .reasoning-line-minitext {
     display: flex;
@@ -587,3 +590,4 @@
     padding: 155px 0 5px 241px;
     letter-spacing: 1.9px;
 }
+
